test/types/complex/diten/cplxExprDotReError.good
cplxExprDotReError.chpl:3: error: non-lvalue actual is passed to a 'ref' formal of re()
