test/types/complex/diten/cplxExprDotReError.chpl
var c = 1.0 + 2.0i;
var d = 2.0 + 3.0i;
(c*conjg(d)).re = 0.0;
